--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.1"
+        "symfony/dotenv": "^4.1",
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "config": {
         "preferred-install": {
@@ -43,7 +44,8 @@
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
+            "php -r \"copy('config/pre-commit', '.git/hooks/pre-commit');\""
         ],
         "post-update-cmd": [
             "@auto-scripts"
