--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 /vendor/
 ###< symfony/framework-bundle ###
 /.idea/
+
+###> symfony/webpack-encore-pack ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-pack ###
