--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "type": "project",
-    "license": "proprietary",
+    "license": "MIT",
     "require": {
         "php": "^7.2",
         "ext-ctype": "*",
@@ -9,7 +9,8 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
-        "symfony/yaml": "^4.1"
+        "symfony/yaml": "^4.1",
+        "symfony/webpack-encore-pack": "^1.0"
     },
     "require-dev": {
         "symfony/dotenv": "^4.1",
