--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,14 @@
         "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
-        "symfony/yaml": "^4.1",
-        "symfony/webpack-encore-pack": "^1.0"
+        "symfony/twig-bundle": "^4.1",
+        "symfony/webpack-encore-pack": "^1.0",
+        "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "symfony/dotenv": "^4.1",
