--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": "airbnb",
-  "parser": "babel-eslint",
+  "parser": "typescript-eslint-parser",
   "rules": {
     "linebreak-style": "off"
   },
