--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "dependencies": {
+        "vue": "^2.5.16",
+        "vue-router": "^3.0.1"
+    },
     "devDependencies": {
         "@symfony/webpack-encore": "^0.19.0",
         "babel-eslint": "^8.2.5",
@@ -10,14 +14,11 @@
         "eslint-plugin-import": "^2.13.0",
         "eslint-plugin-jsx-a11y": "^6.0.3",
         "eslint-plugin-react": "^7.10.0",
+        "eslint-plugin-vue": "^4.5.0",
         "fork-ts-checker-webpack-plugin": "^0.4.2",
         "node-sass": "^4.9.0",
         "sass-loader": "^7.0.3",
-        "ts-loader": "^3.5.0",
-        "typescript": "^2.9.2",
-        "typescript-eslint-parser": "^16.0.1",
-        "vue": "^2.5.16",
-        "vue-loader": "^15.2.4",
+        "vue-loader": "vue-loader@^14.2.2",
         "vue-template-compiler": "^2.5.16",
         "webpack-notifier": "^1.6.0"
     },
